@@ -4,7 +4,7 @@ Title: Tools for Text Analytics
 Version: 1.2.0.9001
 Date: 2022-07-15
 Description: Tools that support "Natural Language Processing" for text analytics.
-License: Apache License (== 2.0)
+License: GPL-2 | file LICENSE
 Encoding: UTF-8
 Depends: R (>= 2.13.0)
 Imports: 
