@@ -1,4 +1,4 @@
-#' 대통령의 연설문
+#' President's Speech
 #'
 #' @description
 #' 대통령기록연구실 홈페이지에서 수집한 역대 퇴임 대통령들의 연설문
