@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/hliTA.R
+% Please edit documentation in R/bitTA.R
 \docType{package}
 \name{bitTA-package}
 \alias{bitTA}
 \alias{bitTA-package}
-\title{TA 기능의 비트알 3rd party 패키지}
+\title{3rd party package of Bit2R with TA function}
 \description{
 자연어 처리(Natural Language Processing), 텍스트 분석 모델 및
 텍스트 분석을 위한 시각화와 도구 모음.
