@@ -1,11 +1,13 @@
 CHANGES IN R VERSION 1.1.0:
-  MAJOR CHANGES:
+  NEW FEATURES:
     * 은전한닢 형태소분석기(mecab-ko)와 사전(mecab-ko-dic)을 사용자 환경에 
       설치하는 함수 추가 (thanks to @stacklee, #5)
       - install_mecab_ko()
       - Linix, Mac, Windows 운영체제 지원
     * n-gram 토큰화 기능 추가 
       - get_ngram()
+    * KOSAC 감성사전 기반의 감성분석 
+      - get_opinion()
       
         
         
